# mini-move

./: Cargo.toml
.github/workflows/: ci-pre-land.yml
docker/ci/github/: Dockerfile
language/move-binary-format/: Cargo.toml
language/move-binary-format/src/: proptest_types.rs
language/move-binary-format/src/proptest_types/: functions.rs
language/move-bytecode-verifier/: Cargo.toml
language/move-bytecode-verifier/src/: acquires_list_verifier.rs  check_duplication.rs  control_flow_v5.rs  instantiation_loops.rs
language/move-bytecode-verifier/src/reference_safety/: mod.rs
language/move-core/types/: Cargo.toml
language/move-core/types/src/: vm_status.rs
language/move-core/types/src/unit_tests/: identifier_test.rs
language/move-ir/types/: Cargo.toml
language/move-ir/types/src/: ast.rs  lib.rs  location.rs  spec_language_ast.rs
language/move-symbol-pool/: Cargo.toml
language/move-symbol-pool/src/: lib.rs  pool.rs  symbol.rs
language/move-vm/runtime/: Cargo.toml
language/move-vm/runtime/src/: data_cache.rs  interpreter.rs  lib.rs  loader.rs  native_extensions.rs  native_functions.rs  runtime.rs  session.rs  tracing.rs
language/move-vm/types/: Cargo.toml
language/move-vm/types/src/: data_store.rs  lib.rs  views.rs
language/move-vm/types/src/loaded_data/: runtime_types.rs
language/move-vm/types/src/values/: values_impl.rs
