[package]
name = "move-binary-format"
version = "0.0.3"
authors = ["Diem Association <opensource@diem.com>"]
description = "Move Binary Format"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2021"

[dependencies]
anyhow.workspace = true
ref-cast.workspace = true
variant_count.workspace = true
serde.workspace = true
hashbrown.workspace = true
arbitrary = { version = "1.1.7", optional = true, features = ["derive"] }
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }

move-core-types.workspace = true

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
move-core-types = { path = "../move-core/types", features = ["fuzzing" ] }
serde_json = "1.0.64"

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "arbitrary", "move-core-types/fuzzing"]
