[package]
name = "move-bytecode-verifier"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Move bytecode verifier"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
petgraph.workspace = true
fail.workspace = true
hashbrown.workspace = true

move-borrow-graph.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true

[features]
default = []
