[package]
name = "move-core-types"
version = "0.0.4"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core types for Move"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2021"

[dependencies]
anyhow.workspace = true
hex.workspace = true
ref-cast.workspace = true
serde.workspace = true
serde_bytes.workspace = true
primitive-types.workspace = true
uint.workspace = true
num.workspace = true
ethnum.workspace = true
spin.workspace = true
arbitrary = { version = "1.1.7", features = [ "derive_arbitrary"], optional = true }
proptest = { version = "1.0.0", default-features = false, optional = true }
proptest-derive = { version = "0.3.0", default-features = false, optional = true }
rand = "0.8.3"

bcs.workspace = true

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.5.5"
serde_json = "1.0.64"
arbitrary = { version = "1.1.7", features = [ "derive_arbitrary"] }

[features]
address20 = []
address32 = []
default = []
fuzzing = ["proptest", "proptest-derive", "arbitrary"]
