[package]
name = "move-vm-runtime"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core Move execution logic"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better_any.workspace = true
fail.workspace = true
spin.workspace = true
sha3.workspace = true
tracing.workspace = true
hashbrown.workspace = true

move-bytecode-verifier.workspace = true
move-core-types.workspace = true
move-vm-types.workspace = true
move-binary-format.workspace = true

[dev-dependencies]
anyhow = "1.0.52"
hex = "0.4.3"
proptest = "1.0.0"
move-ir-compiler = { path = "../../move-ir-compiler" }
move-compiler = { path = "../../move-compiler" }

[features]
default = []
fuzzing = ["move-vm-types/fuzzing"]
failpoints = ["fail/failpoints"]
# Enable tracing and debugging also for release builds. By default, it is only enabled for debug builds.
debugging = []
testing = []
stacktrace = []
lazy_natives = []
