[package]
name = "move-vm-types"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Types for Move VM"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde = { workspace = true , features = ["derive", "rc"] }
smallvec.workspace = true
proptest = { version = "1.0.0", optional = true }

bcs.workspace = true
hashbrown.workspace = true

move-core-types.workspace = true
move-binary-format.workspace = true

[dev-dependencies]
proptest = "1.0.0"

[features]
default = []
fuzzing = ["proptest", "move-binary-format/fuzzing"]
